[metadata]
name = validations-libs
summary = A common library for the validations framework
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-validations/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages = validations_libs

[compile_catalog]
directory = validations-libs/locale
domain = validations-lib

[update_catalog]
domain = validations-libs
output_dir = validations-libs/locale
input_file = validations-libs/locale/validations-libs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = validations-libs/locale/validations-libs.pot

[entry_points]
