[metadata]
name = validations-libs
summary = A common library for the validations framework
long_description = file:README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/validations-libs/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages = validations_libs

data_files =
    etc =
        validation.cfg

[compile_catalog]
directory = validations-libs/locale
domain = validations-lib

[update_catalog]
domain = validations-libs
output_dir = validations-libs/locale
input_file = validations-libs/locale/validations-libs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = validations-libs/locale/validations-libs.pot

[entry_points]
console_scripts:
    validation = validations_libs.cli.app:main

validation.cli:
    list = validations_libs.cli.lister:ValidationList
    show = validations_libs.cli.show:Show
    show_group = validations_libs.cli.show:ShowGroup
    show_parameter = validations_libs.cli.show:ShowParameter
    run = validations_libs.cli.run:Run
    history_list = validations_libs.cli.history:ListHistory
    history_get = validations_libs.cli.history:GetHistory
    init = validations_libs.cli.community:CommunityValidationInit
