[metadata]
name = validations-libs
summary = A common library for the validations framework
long_description = file:README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/validations-libs/latest/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Ansible
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6

[files]
packages = validations_libs

data_files =
    etc = validation.cfg
    share/ansible/callback_plugins = validations_libs/callback_plugins/*

[entry_points]
console_scripts:
    validation = validations_libs.cli.app:main

validation.cli:
    list = validations_libs.cli.lister:ValidationList
    show = validations_libs.cli.show:Show
    show_group = validations_libs.cli.show:ShowGroup
    show_parameter = validations_libs.cli.show:ShowParameter
    run = validations_libs.cli.run:Run
    history_list = validations_libs.cli.history:ListHistory
    history_get = validations_libs.cli.history:GetHistory
    init = validations_libs.cli.community:CommunityValidationInit
